header style, font choices

--- a/style.css
+++ b/style.css
@@ -19,6 +19,17 @@ header {
   margin-top: -50px;
   text-align: right;
 }
+h1 {
+  font-family: 'Concert One', cursive;
+  color: white;
+  font-size: 3em;
+}
+h3 {
+  font-family: 'Gloria Hallelujah', cursive;
+  margin-top: -40px;
+  font-size: 1.5em;
+  margin-right: 85px;
+}
 
 *, *:before, *:after {
   box-sizing: inherit;
@@ -30,6 +41,7 @@ header {
   width: 50vw;
   height: 80vh;
   margin-left: 45vw;
+  margin-top: -25px;
 }
 .panels {
   margin-top: 20px;
@@ -86,7 +98,7 @@ header {
 .panel.open-active > *:last-child { transform: translateY(-30%) color(black);}
 
 .panel p {
-  font-family: 'Lobster', cursive;
+  font-family: 'Gloria Hallelujah', cursive;
   font-size: 1em;
   justify-content: center;
   align-items: center;
@@ -104,7 +116,7 @@ header {
 
 .panel.open {
   flex: 1;
-  font-size: 3em;
+  font-size: 1em;
   color:black;
   background-size: cover;
   min-height: 32vh;
