--- a/style.css
+++ b/style.css
@@ -10,14 +10,16 @@ body {
 #draw {
   background-color: #ffffff;
   position: center;
-  border: solid red;
-  border-radius: 50px;
+  border: solid black 5px;
+  border-radius: 20px;
   margin-top: -700px;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
+  width: 40vw;
+  height: 80vh;
 }
 header {
   margin-top: -50px;
-  text-align: right;
+  text-align: center;
 }
 h1 {
   font-family: 'Concert One', cursive;
@@ -28,7 +30,6 @@ h3 {
   font-family: 'Gloria Hallelujah', cursive;
   margin-top: -40px;
   font-size: 1.5em;
-  margin-right: 85px;
 }
 
 *, *:before, *:after {
