--- a/style.css
+++ b/style.css
@@ -29,6 +29,8 @@ h1 {
 h3 {
   font-family: 'Gloria Hallelujah', cursive;
   margin-top: -40px;
+  margin-right: 80px;
+  text-align: right;
   font-size: 1.5em;
 }
 
