--- a/style.css
+++ b/style.css
@@ -26,9 +26,16 @@ h1 {
   color: white;
   font-size: 3em;
 }
-h3 {
+h2 {
+  font-size: 1.5em;
   font-family: 'Gloria Hallelujah', cursive;
   margin-top: -40px;
+  margin-left: 200px;
+  text-align: left;
+}
+h3 {
+  font-family: 'Gloria Hallelujah', cursive;
+  margin-top: -70px;
   margin-right: 80px;
   text-align: right;
   font-size: 1.5em;
