--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
 @import url('https://fonts.googleapis.com/css?family=Concert+One|Gloria+Hallelujah&display=swap');
 html {
- background-color: #929292;
- box-sizing: border-box;
+  background: #79168d68;
+  background: -moz-linear-gradient(-45deg, #79168d68 0%, #1C6EA4 50%, #AEA9C5 100%);
+  background: -webkit-linear-gradient(-45deg, #79168d68 0%, #1C6EA4 50%, #AEA9C5 100%);
+  background: linear-gradient(135deg, #79168d68 0%, #1C6EA4 50%, #AEA9C5 100%);
+  box-sizing: border-box;
+  opacity: .90;
 }
 body {
   margin: 50px;
